Feat : petite tryangle qui bouge <3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Vite Three JS</title>
 </head>
-<body>
+<body style="margin: 0">
 
 <script type="module" src="./main.js"></script>
 </body>
