--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="margin: 0">
 
-<script type="module" src="./main.js"></script>
+<script type="module" src="src/main.ts"></script>
 </body>
 </html>
